fix overflow styles, added todos

--- a/modules/ravestate_ui_new/src/app/app.component.scss
+++ b/modules/ravestate_ui_new/src/app/app.component.scss
@@ -34,4 +34,5 @@ $header-height: 50px;
   grid-area: side;
   padding: 5px;
   border-top: 5px solid #373237;
+  overflow-y: auto;
 }
